...
        let urlTestItems: [OutboundGroupItem] = (0 ..< 137).map { index in
            let tag = index == 0 ? "Tokyo" : "node-\(index)"
            let delay = UInt16(100 + index * 13)
            return OutboundGroupItem(tag: tag, type: "Shadowsocks", urlTestTime: .now, urlTestDelay: delay)
        }
        return [
            OutboundGroup(tag: "my_group", type: "selector", selected: "server", selectable: true, isExpand: true, items: selectorItems),
            OutboundGroup(tag: "Auto", type: "urltest", selected: "Tokyo", selectable: true, isExpand: false, items: urlTestItems),
        ]
    }
}

